fixing horizontal scroll

--- a/css/footer.css
+++ b/css/footer.css
@@ -49,7 +49,7 @@ i{
 }
 input{
     background-color: rgba(255, 255, 255, 0.01);
-    width:220px;
+    width:100%;
     margin-top:12px;
     margin-bottom: 20px;
     padding:15px 26px 15px 26px; 
@@ -177,12 +177,12 @@ filter: saturate(160%) brightness(85%);
 
 @media (min-width:400px){
     .footer__contact-form{
-        width:680px;
+        width:100%;
         height: 654px;
         
     }
     input{
-        width:550px;
+        width:100%;
         line-height:20px;
         margin:20px;
         padding:15px 26px 15px 26px;
@@ -245,18 +245,18 @@ filter: saturate(160%) brightness(85%);
 
 @media (min-width:400px){
     .footer__contact-form{
-        width:680px;
+        width:100%;
         height: 654px;
         
     }
     input{
-        width:550px;
+        width:auto;
         line-height:20px;
         margin:20px;
         padding:15px 26px 15px 26px;
     }
     .submit__btn{
-        width:550px;
+        width:auto;
         line-height: 20px;
         margin:26px;
         padding:15px 26px 15px 26px;
